fix: removed horizontal scroll bar.

--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -41,6 +41,8 @@ html {
 }	
 body {
 	width: 100%;
+	margin: 0;
+	padding: 0;
   }
   a {
     text-decoration: none;
